--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "ecmaVersion": 2019,
     "ecmaFeatures": {
       "impliedStrict": true
-    }
+    },
+    "sourceType": "module"
   },
   "env": {
     "browser": true,
