--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
+    "build": "yarn run clean && webpack --mode=production",
+    "build:dev": "yarn run clean && webpack --mode=development",
     "serve": "webpack-dev-server",
     "test": "yarn run test:lint && yarn run test:jest",
     "test:jest": "jest",
@@ -21,15 +21,23 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.2.1",
+    "core-js": "3.6.3",
     "geometric": "2.2.0",
     "leaflet": "1.6.0",
-    "leaflet-react": "3.0.5",
     "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-leaflet": "2.6.1",
     "react-redux": "7.1.3",
     "redux": "4.0.5",
-    "redux-localstorage": "0.4.1"
+    "redux-localstorage": "0.4.1",
+    "regenerator-runtime": "0.13.3",
+    "validate-value": "7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.8.0",
+    "@babel/preset-env": "7.8.0",
+    "@babel/preset-react": "7.8.0",
+    "babel-loader": "8.0.6",
     "css-loader": "3.4.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.9.0",
