--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   "rules": {
     "no-unused-vars": ["error", {
       "ignoreRestSiblings": true
-    }]
+    }],
+    "react/prop-types": "off"
   }
 }
