--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,11 @@
   "rules": {
     "no-unused-vars": ["error", {
       "ignoreRestSiblings": true
-    }],
-    "react/prop-types": "off"
+    }]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
