--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "1.19.1",
     "sass-loader": "8.0.1",
     "style-loader": "1.1.2",
+    "uuid": "3.3.3",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
