--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "3.6.3",
     "geometric": "2.2.0",
     "leaflet": "1.6.0",
+    "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-leaflet": "2.6.1",
